--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.meli.trainingml.ListItemsActivity"></activity>
     </application>
-
+	<category android:name="android.intent.category.DEFAULT" />
 </manifest>
