--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.meli.trainingml.ListItemsActivity"></activity>
+        <activity android:name="com.meli.trainingml.ItemDetailActivity"></activity>
     </application>
 	<category android:name="android.intent.category.DEFAULT" />
 </manifest>
