* exercises were organized

--- a/tp_search_items_fragments/.project
+++ b/tp_search_items_fragments/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TrainingML</name>
+	<name>tp_search_items_fragments</name>
 	<comment></comment>
 	<projects>
 		<project>appcompat_v7</project>
