--- a/widgets/app/src/main/AndroidManifest.xml
+++ b/widgets/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="19" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
@@ -23,6 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.meli.widgets.CategoryActivity"></activity>
+        <activity android:name="com.meli.widgets.SearchActivity"></activity>
+
        	<receiver android:name="com.meli.widgets.FeaturesItemsWidgetProvider" >
 		    <intent-filter>
 		        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
